Adjust header spacing issue

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -25,7 +25,7 @@
 }
 
 .user-display {
-  margin-right: 1rem;
+  padding-right: 2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
